--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -200,8 +200,12 @@
 																	data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
 																	data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
 																	<i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
-																<button class="add-to-compare" data-id="<%= producto.id %>" ><i class="fa fa-exchange"></i>
-                                                <span class="tooltipp">Comparar</span></button>
+																	
+																	<% if (producto.esMovil) { %>
+																	<button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa fa-exchange"></i>
+																	<span class="tooltipp">Comparar</span></button>
+																	<% } %>
+
 																<button class="quick-view" title="Vista rápida">
 																	<i class="fa fa-eye"></i><span class="tooltipp">Vista rápida</span>
 																</button>
