--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -10,21 +10,26 @@
     <input type="email" name="email" value="<%= email || '' %>" placeholder="ejemplo@gmail.com" required class="<%= validationErrors?.email ? 'input-error' : '' %>">
     
     <% if (validationErrors?.email) { %>
-      <p class="field-error"><%= validationErrors.email %></p>
+      <p class="field-error">
+        <i class="fa-solid fa-circle-exclamation"></i>
+        <%= validationErrors.email %></p>
     <% } %>
     
     <label for="password">Contraseña:</label>
     <div class="password-wrapper">
       <input type="password" name="password" id="passwordInput" placeholder="Introduce la contraseña" required 
-      class="password-input <%= validationErrors?.password ? 'input-error' : '' %>">
-    
+      class="password-input <%= validationErrors?.password ? 'input-error' : '' %>" >
+      
       <span onclick="togglePassword('password')" class="toggle-password">
         <i id="eyeIconPassword" class="fas fa-eye-slash"></i>
       </span>
     </div>
     
     <% if (validationErrors?.password) { %>
-      <p class="field-error"><%= validationErrors.password %></p>
+    <p class="field-error">
+      <i class="fa-solid fa-circle-exclamation"></i>
+      <%= validationErrors.password %>
+    </p>
     <% } %>
     
     <% if (error && !validationErrors) { %>
