--- a/src/views/store/contact.ejs
+++ b/src/views/store/contact.ejs
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="/css/toastify.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <body class="body-contact">
 <div class="contactos-page">
@@ -51,7 +52,9 @@
                     <input type="text" class="entrada-texto <%= validationErrors?.nombre ? 'input-error' : '' %>" 
                     id="nombre" name="nombre" placeholder="Introduce el nombre" value="<%= nombre || '' %>">
                     <% if (validationErrors?.nombre) { %>
-                        <p class="field-error"><%= validationErrors.nombre %></p>
+                        <p class="field-error">
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                        <%= validationErrors.nombre %></p>
                     <% } %>
                 </div>
                 <div class="campo-formulario">
@@ -59,7 +62,9 @@
                     <input type="email" class="entrada-texto <%= validationErrors?.email ? 'input-error' : '' %>" 
                     id="email" name="email" placeholder="ejemplo@gmail.com" value="<%= email || '' %>">
                     <% if (validationErrors?.email) { %>
-                        <p class="field-error"><%= validationErrors.email %></p>
+                        <p class="field-error">
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                        <%= validationErrors.email %></p>
                     <% } %>
                 </div>
             </div>
@@ -68,7 +73,9 @@
                 <input type="text" class="entrada-texto <%= validationErrors?.asunto ? 'input-error' : '' %>" 
                 id="asunto" name="asunto" placeholder="Introduce el asunto" value="<%= asunto || '' %>">
                 <% if (validationErrors?.asunto) { %>
-                    <p class="field-error"><%= validationErrors.asunto %></p>
+                    <p class="field-error">
+                    <i class="fa-solid fa-circle-exclamation"></i>
+                    <%= validationErrors.asunto %></p>
                 <% } %>
             </div>
             <div class="campo-formulario">
@@ -76,17 +83,20 @@
                 <textarea class="entrada-texto <%= validationErrors?.mensaje ? 'input-error' : '' %>" 
                 id="mensaje" name="mensaje" placeholder="Escribe tu mensaje..." rows="8"><%= mensaje || '' %></textarea>
                 <% if (validationErrors?.mensaje) { %>
-                    <p class="field-error"><%= validationErrors.mensaje %></p>
+                    <p class="field-error"><i class="fa-solid fa-circle-exclamation"></i>
+                    <%= validationErrors.mensaje %></p>
                 <% } %>
             </div>
             
             <% if (validationErrors?.password) { %>
-                <p class="field-error"><%= validationErrors.password %></p>
-              <% } %>
+                <p class="field-error">
+                <i class="fa-solid fa-circle-exclamation"></i>
+                <%= validationErrors.password %></p>
+            <% } %>
 
-              <% if (error && !validationErrors) { %>
+            <% if (error && !validationErrors) { %>
                 <p class="general-error"><%= error %></p>
-              <% } %>
+            <% } %>
             
             <div class="fila-boton">
                 <button type="submit" class="boton-enviar">Enviar</button>
