--- a/public/css/about.css
+++ b/public/css/about.css
@@ -282,3 +282,61 @@ body, html {
         height: 25px;
     }
 }
+
+@media (max-width: 1024px) {
+    .fila {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .columna-texto, .columna-imagen, .columna-md-6, .columna-lg-3 {
+        width: 100%;
+        margin: 15px 0;
+        text-align: center;
+    }
+
+    .foto {
+        max-width: 85%;
+    }
+
+    .icono-servicio {
+        width: 80%;
+        padding: 50px;
+        height: auto;
+    }
+
+    .titulo-about {
+        font-size: 2.5rem;
+    }
+
+    .parrafo-about {
+        font-size: 17px;
+        padding: 0 20px;
+    }
+
+    .contenedor-2 {
+        padding: 60px 30px;
+    }
+
+    .contenido-historia {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .historia-texto {
+        font-size: 1.3rem;
+        padding: 2rem;
+    }
+
+    .historia-imagen img {
+        max-width: 95%;
+    }
+
+    .sobre-nosotros {
+        font-size: 3rem;
+    }
+
+    .texto-exito {
+        font-size: 3rem;
+    }
+}
