--- a/src/views/login/register.ejs
+++ b/src/views/login/register.ejs
@@ -8,26 +8,27 @@
   <form action="/api/auth/register" method="POST">
     <label>Nombre de usuario:</label>
     <input type="text" name="username" value="<%= username || '' %>" 
-           placeholder="Introducir nombre de usuario" required
-           class="<%= validationErrors?.username ? 'input-error' : '' %>">
+    placeholder="Introducir nombre de usuario" required
+    class="<%= validationErrors?.username ? 'input-error' : '' %>">
     
     <% if (validationErrors?.username) { %>
-      <p class="field-error"><%= validationErrors.username %></p>
+      <p class="field-error"><i class="fa-solid fa-circle-exclamation"></i>
+      <%= validationErrors.username %></p>
     <% } %>
 
     <label>Correo electrónico:</label>
-    <input type="email" name="email" value="<%= email || '' %>" 
-           placeholder="ejemplo@gmail.com" required
-           class="<%= validationErrors?.email ? 'input-error' : '' %>">
+    <input type="email" name="email" value="<%= email || '' %>" placeholder="ejemplo@gmail.com" 
+    required class="<%= validationErrors?.email ? 'input-error' : '' %>">
     
     <% if (validationErrors?.email) { %>
-      <p class="field-error"><%= validationErrors.email %></p>
+      <p class="field-error"><i class="fa-solid fa-circle-exclamation"></i>
+      <%= validationErrors.email %></p>
     <% } %>
     
     <label>Contraseña:</label>
-<div class="password-wrapper">
-  <input type="password" name="password" id="passwordInput" placeholder="Introducir contraseña" required
-         class="password-input <%= validationErrors?.password ? 'input-error' : '' %>">
+    <div class="password-wrapper">
+      <input type="password" name="password" id="passwordInput" placeholder="Introducir contraseña" required
+      class="password-input <%= validationErrors?.password ? 'input-error' : '' %>">
   
   <span onclick="togglePassword('password')" class="toggle-password">
     <i id="eyeIconPassword" class="fas fa-eye-slash"></i>
@@ -35,7 +36,8 @@
 </div>
     
 <% if (validationErrors?.password) { %>
-  <p class="field-error"><%= validationErrors.password %></p>
+  <p class="field-error"><i class="fa-solid fa-circle-exclamation"></i>
+  <%= validationErrors.password %></p>
 <% } %>
 
 <label>Confirmar contraseña:</label>
@@ -48,16 +50,17 @@
   </span>
 </div>
 
-    <% if (validationErrors?.confirmPassword) { %>
-      <p class="field-error"><%= validationErrors.confirmPassword %></p>
-    <% } %>
+  <% if (validationErrors?.confirmPassword) { %>
+    <p class="field-error"><i class="fa-solid fa-circle-exclamation"></i>
+    <%= validationErrors.confirmPassword %></p>
+  <% } %>
 
-    <% if (error && !validationErrors) { %>
-      <p class="general-error"><%= error %></p>
-    <% } %>
+  <% if (error && !validationErrors) { %>
+    <p class="general-error"><%= error %></p>
+  <% } %>
 
-    <button type="submit">Registrarse</button>
-  </form>
+  <button type="submit">Registrarse</button>
+</form>
 
   <div class="links">
     <p>¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
